force-app/main/default/objects/coe_IntakeReview__c.object
<CustomObject>
    <fields>
        <fullName>Reviewer_Email__c</fullName>
        <label>Reviewer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>coe_Application_Name__c</fullName>
        <label>Application Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>coe_Can_App_use_an_existing_platform__c</fullName>
        <label>Can this App use an existing platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>coe_DoesPlatformSupportIntegration_needs__c</fullName>
        <label>Does Platform support Integration needs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>coe_Does_an_App_for_this_Use_Case_exist__c</fullName>
        <label>Does an App for this Use Case exist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>coe_Does_the_use_case_need_collaboration__c</fullName>
        <label>Does the use case need collaboration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>coe_Intake__c</fullName>
        <label>Intake</label>
        <referenceTo>coe_Intake__c</referenceTo>
        <relationshipLabel>Intake Reviews</relationshipLabel>
        <relationshipName>Reviewers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>coe_IsBusiness_process_automation_needed__c</fullName>
        <label>Is business process automation needed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>coe_Is_Mobile_Access_needed__c</fullName>
        <label>Is Mobile Access needed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>coe_Level_of_Core_Capabilities_available__c</fullName>
        <inlineHelpText>Based on the use case what level of core platform capabilities are available to use without the need of other platforms</inlineHelpText>
        <label>Level of Core Capabilities available</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High - 80 to 100%</fullName>
                </value>
                <value>
                    <fullName>Medium - 50 to 79%</fullName>
                </value>
                <value>
                    <fullName>Low - 0 to 49%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>coe_Level_of_configuration_customization__c</fullName>
        <inlineHelpText>Level of declarative customization that can be used to build out use case.</inlineHelpText>
        <label>Level of declarative cust for platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High - 90 to 100%</fullName>
                </value>
                <value>
                    <fullName>Medium - 60 to 89%</fullName>
                </value>
                <value>
                    <fullName>Low - 0 to 59%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>coe_Platform__c</fullName>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Appian</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>Pega Systems</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>ServiceNow</fullName>
                </value>
                <value>
                    <fullName>Custom Build</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>coe_Recommendation__c</fullName>
        <label>Recommendation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>coe_Reviewer_Notes__c</fullName>
        <label>Reviewer Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>coe_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <referenceTo>Employee</referenceTo>
        <relationshipLabel>Intake Reviews</relationshipLabel>
        <relationshipName>Reviewers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>coe_Security_Level_Required__c</fullName>
        <label>Security Level Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>coe_Value_ATO__c</fullName>
        <formula>IF(ISPICKVAL(  coe_Will_an_ATO_be_required__c , &apos;Yes&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value ATO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>coe_Value_App_Exists__c</fullName>
        <formula>IF(ISPICKVAL( coe_Does_an_App_for_this_Use_Case_exist__c, &apos;Yes&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value App Exists</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>coe_Value_Collaboration_Need__c</fullName>
        <formula>IF(ISPICKVAL(  coe_Does_the_use_case_need_collaboration__c , &apos;Yes&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value Collaboration Need</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>coe_Value_Core_Capabilities__c</fullName>
        <formula>IF(ISPICKVAL(  coe_Level_of_Core_Capabilities_available__c , &apos;High - 80 to 100%&apos;), 2, 
    IF(ISPICKVAL( coe_Level_of_Core_Capabilities_available__c, &apos;Medium - 50 to 79%&apos;), 1, 0)
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value Core Capabilities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>coe_Value_Declarative__c</fullName>
        <formula>IF(ISPICKVAL(   coe_Level_of_configuration_customization__c  , &apos;High - 90 to 100%&apos;), 2, 
    IF(ISPICKVAL( coe_Level_of_configuration_customization__c, &apos;Medium - 60 to 89%&apos;), 1, 0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value Declarative</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>coe_Value_Existing_Platform__c</fullName>
        <formula>IF(  ISPICKVAL(coe_Can_App_use_an_existing_platform__c , &apos;Yes&apos;), 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value Existing Platform</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>coe_Value_Integration_Need__c</fullName>
        <formula>IF(ISPICKVAL(  coe_DoesPlatformSupportIntegration_needs__c , &apos;Yes&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value Integration Need</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>coe_Value_Mobile_Access__c</fullName>
        <formula>IF(ISPICKVAL(  coe_Is_Mobile_Access_needed__c , &apos;Yes&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value Mobile Access</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>coe_Value_Process_Automation__c</fullName>
        <formula>IF(ISPICKVAL(  coe_IsBusiness_process_automation_needed__c , &apos;Yes&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value Process Automation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>coe_Value_Recommendation__c</fullName>
        <formula>IF(ISPICKVAL(  coe_Recommendation__c , &apos;Approve&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value Recommendation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>coe_Value_Security_Level__c</fullName>
        <formula>IF(ISPICKVAL(  coe_Security_Level_Required__c , &apos;High&apos;), 2, 
    IF(ISPICKVAL( coe_Security_Level_Required__c , &apos;Moderate&apos;), 1, 0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value Security Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>coe_Value_Use_Case_Exist__c</fullName>
        <formula>IF(ISPICKVAL(  coe_Does_an_App_for_this_Use_Case_exist__c , &apos;Yes&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value Use Case Exist</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>coe_Will_an_ATO_be_required__c</fullName>
        <label>Will an ATO be required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <label>Intake Review</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RN-{0000}</displayFormat>
        <label>Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intake Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>